[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "silero-stress"
version = "1.0.0"
authors = [
  {name="Silero Team", email="hello@silero.ai"},
]
description = "Russian Word Stress by Silero"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  "torch>=1.12.0",
]
[project.urls]
Homepage = "https://github.com/snakers4/silero-stress"
Issues = "https://github.com/snakers4/silero-stress/issues"